Changed ion beam rms size and updated script

--- a/FBII_tracking_example.ipynb
+++ b/FBII_tracking_example.ipynb
@@ -215,7 +215,7 @@
     "        if sig_check:\n",
     "                self._efieldn = efields.add_sigma_check(\n",
     "                    self._efieldn, self.dist)\n",
-    "        self.n_g = 2.4e14 # was 2.4e13\n",
+    "        self.n_g = 2.4e17 # was 2.4e13\n",
     "        self.sigma_i = 1.8e-22\n",
     "        self.A = 28\n",
     "        self.charge_state = 1\n",
@@ -256,9 +256,9 @@
     "                                                    gamma=1.0001,\n",
     "                                                    mass=self.A*m_p,\n",
     "                                                    circumference=CIRCUMFERENCE,\n",
-    "                                                    distribution_x=generators.gaussian2D(EPSILON_X/np.sqrt(2)),\n",
+    "                                                    distribution_x=generators.gaussian2D(EPSILON_X/2),\n",
     "                                                    alpha_x=ALPHA_X_SMOOTH, beta_x=BETA_X_SMOOTH,\n",
-    "                                                    distribution_y=generators.gaussian2D(EPSILON_Y/np.sqrt(2)),\n",
+    "                                                    distribution_y=generators.gaussian2D(EPSILON_Y/2),\n",
     "                                                    alpha_y=ALPHA_Y_SMOOTH, beta_y=BETA_Y_SMOOTH,\n",
     "                                                    distribution_z=generators.uniform2D(0, self.CIRCUMFERENCE/self.N_SEGMENTS),\n",
     "                                                    limit_n_rms_x=3., limit_n_rms_y=3.,\n",
@@ -359,17 +359,17 @@
      "output_type": "stream",
      "text": [
       "First 5 elements of a transverse map: \n",
-      "<PyHEADTAIL.trackers.transverse_tracking.TransverseSegmentMap object at 0x7f2b478b6760>\n",
-      "<__main__.BeamIonElement object at 0x7f2b478b6730>\n",
-      "<PyHEADTAIL.trackers.transverse_tracking.TransverseSegmentMap object at 0x7f2b478b6460>\n",
-      "<__main__.BeamIonElement object at 0x7f2b3f8b1fa0>\n",
-      "<PyHEADTAIL.trackers.transverse_tracking.TransverseSegmentMap object at 0x7f2b478b6400>\n"
+      "<PyHEADTAIL.trackers.transverse_tracking.TransverseSegmentMap object at 0x7f4bf86daaf0>\n",
+      "<__main__.BeamIonElement object at 0x7f4bf070ee80>\n",
+      "<PyHEADTAIL.trackers.transverse_tracking.TransverseSegmentMap object at 0x7f4bf86daee0>\n",
+      "<__main__.BeamIonElement object at 0x7f4bf076dd30>\n",
+      "<PyHEADTAIL.trackers.transverse_tracking.TransverseSegmentMap object at 0x7f4bf86da850>\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fde5fd63ab854d9db793c9d250a4fe2d",
+       "model_id": "59e49dc766394c65a26bfd6d6b17eafb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -383,7 +383,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d61964b7403044babae858593d699a0d",
+       "model_id": "65dc4755f65b4507b3f87451dd7686f0",
        "version_major": 2,
        "version_minor": 0
       },
