--- a/notebooks/Convergence.ipynb
+++ b/notebooks/Convergence.ipynb
@@ -7,6 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append('../')\n",
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
     "import seaborn as sbs\n",
